--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 8
         targetSdkVersion 21
         versionCode 2
-        versionName "0.0.2"
+        versionName "0.1.0"
     }
     buildTypes {
         release {
@@ -27,6 +27,7 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:21.0.0'
+    compile 'org.apache.commons:commons-lang3:3.+'
 }
 
 apply from: 'aar.gradle'
