--- a/lib/aar.gradle
+++ b/lib/aar.gradle
@@ -3,7 +3,7 @@ apply plugin: 'signing'
 
 def groupId = "com.gokhanbarisaker"
 def artifactId = "osapis"
-def version = android.defaultConfig.versionName //"0.0.2"
+def version = android.defaultConfig.versionName
 def localReleaseDest = "${buildDir}/release/${version}"
 
 task androidJavadocs(type: Javadoc) {
