--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -5,12 +5,10 @@ apply plugin: 'signing'
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.1"
-
     defaultConfig {
-        applicationId "com.gokhanbarisaker.osapis"
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 21
-        versionCode 2
+        versionCode 3
         versionName "0.1.0"
     }
     buildTypes {
@@ -23,11 +21,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:support-v4:21.+'
     compile 'org.apache.commons:commons-lang3:3.+'
+    compile 'com.google.android.gms:play-services:6.+'
 }
 
 apply from: 'aar.gradle'
