--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gokhanbarisaker.osapissample" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.gokhanbarisaker.osapissample.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,29 +19,35 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.gokhanbarisaker.osapissample.KeyboardActivity"
+            android:name=".KeyboardActivity"
             android:label="@string/title_activity_keyboard"
-            android:parentActivityName="com.gokhanbarisaker.osapissample.MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gokhanbarisaker.osapissample.MainActivity" />
         </activity>
         <activity
-            android:name="com.gokhanbarisaker.osapissample.DeviceStatusActivity"
+            android:name=".DeviceStatusActivity"
             android:label="@string/title_activity_device_status"
-            android:parentActivityName="com.gokhanbarisaker.osapissample.MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gokhanbarisaker.osapissample.MainActivity" />
         </activity>
         <activity
-            android:name="com.gokhanbarisaker.osapissample.ShareActivity"
+            android:name=".ShareActivity"
             android:label="@string/title_activity_share"
-            android:parentActivityName="com.gokhanbarisaker.osapissample.MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gokhanbarisaker.osapissample.MainActivity" />
         </activity>
+
+        <service
+            android:name=".service.FlickrService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
