--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'signing'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.1"
+    buildToolsVersion '21.1.2'
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 21
