--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,15 @@
             android:enabled="true"
             android:exported="false" >
         </service>
+
+        <activity
+            android:name=".activity.CameraActivity"
+            android:label="@string/title_activity_camera"
+            android:parentActivityName=".activity.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gokhanbarisaker.osapissample.activity.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
