--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -26,9 +26,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.+'
-    compile 'org.apache.commons:commons-lang3:3.+'
-    compile 'com.google.android.gms:play-services:6.+'
+    compile 'com.android.support:support-v4:22.1.1'
+    compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'org.apache.commons:commons-lang3:3.4'
 }
 
 apply from: 'aar.gradle'
