--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 21
         versionCode 6
         versionName "0.4.0"
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -21,6 +22,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true // Caution!
+    }
+
     productFlavors {
     }
 }
@@ -29,6 +35,9 @@ dependencies {
     compile 'com.android.support:support-v4:22.1.1'
     compile 'com.google.android.gms:play-services:7.0.0'
     compile 'org.apache.commons:commons-lang3:3.4'
+    androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'org.mockito:mockito-core:2.0.7-beta'
+    androidTestCompile 'com.android.support.test:runner:0.2'
 }
 
 apply from: 'aar.gradle'
