--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -8,9 +8,9 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 21
-        versionCode 6
-        versionName "0.4.0"
-        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+        versionCode 7
+        versionName "0.4.1"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -35,9 +35,11 @@ dependencies {
     compile 'com.android.support:support-v4:22.1.1'
     compile 'com.google.android.gms:play-services:7.0.0'
     compile 'org.apache.commons:commons-lang3:3.4'
-    androidTestCompile 'junit:junit:4.12'
-    androidTestCompile 'org.mockito:mockito-core:2.0.7-beta'
-    androidTestCompile 'com.android.support.test:runner:0.2'
+    compile 'com.android.support:support-annotations:22.1.1'
+    // Testing-only dependencies
+    androidTestCompile 'com.android.support.test:runner:0.+'
+    androidTestCompile 'com.android.support.test:rules:0.+'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.+'
 }
 
 apply from: 'aar.gradle'
