--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven'
 apply plugin: 'signing'
-
 android {
     compileSdkVersion 22
-    buildToolsVersion '22.0.1'
+    buildToolsVersion '23.0.0 rc1'
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 21
-        versionCode 8
-        versionName "0.4.2"
+        versionCode 9
+        versionName "0.5.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -30,12 +29,11 @@ android {
     productFlavors {
     }
 }
-
 dependencies {
-    compile 'com.android.support:support-v4:22.1.1'
-    compile 'com.google.android.gms:play-services:7.3.0'
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.google.android.gms:play-services:7.5.0'
     compile 'org.apache.commons:commons-lang3:3.4'
     // Testing-only dependencies
+    compile 'junit:junit:4.12'
 }
-
 apply from: 'aar.gradle'
