Updated to build tools v23.0.0 & android plugin v1.3.1 & gradle v2.5

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 android {
     compileSdkVersion 22
-    buildToolsVersion '23.0.0 rc2'
+    buildToolsVersion '23.0.0'
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 21
