--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -25,15 +25,13 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true // Caution!
     }
-
-    productFlavors {
-    }
 }
 dependencies {
-    compile 'com.android.support:support-v4:22.2.0'
-    compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'com.google.android.gms:play-services-plus:7.+'
+    compile 'org.apache.commons:commons-lang3:3.+'
+
+
     // Testing-only dependencies
-    compile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
 }
 apply from: 'aar.gradle'
