--- a/lib/src/main/AndroidManifest.xml
+++ b/lib/src/main/AndroidManifest.xml
@@ -1,13 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gokhanbarisaker.osapis">
-
-    <meta-data android:name="com.google.android.gms.version"
-        android:value="@integer/google_play_services_version" />
-
-    <!--<uses-permission android:name="android.permission.CAMERA" />-->
-    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
-    <!--<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />-->
-    <!--<uses-feature android:name="android.hardware.camera" android:required="false" />-->
-    <!--<uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />-->
-
+<manifest package="com.gokhanbarisaker.osapis">
 </manifest>
