--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,6 +1,9 @@
+plugins {
+    id "com.jfrog.bintray" version "1.3.1"
+}
+
 apply plugin: 'com.android.library'
-apply plugin: 'maven'
-apply plugin: 'signing'
+
 android {
     compileSdkVersion 22
     buildToolsVersion '23.0.0'
@@ -34,4 +37,5 @@ dependencies {
     // Testing-only dependencies
     testCompile 'junit:junit:4.12'
 }
-apply from: 'aar.gradle'
+
+apply from: 'credentials.gradle'
